--- a/padding.html
+++ b/padding.html
@@ -30,5 +30,6 @@ Lorem, ipsum dolor sit amet consectetur adipisicing elit. Incidunt et atque dolo
     <div id="caja2">
 
     </div>
+    <a href="index.html">Pagina principal</a>
 </body>
 </html>
